# oarepo

./: .gitignore  .pre-commit-hooks.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  download_translations.sh  invenio_modules_with_translations.txt  package.json  pyproject.toml  pytest.ini  reqs-tests.txt  reqs.txt  requirements-tests.txt  requirements.txt  run-tests.sh  run.sh  runner-missing-aliases-issue.md  setup.cfg  setup.py
.github/: dependabot.yml
.github/actions/install_dependencies/: action.yaml
.github/actions/jstest/: action.yaml
.github/actions/pytest/: action.yaml
.github/workflows/: codeql.yml  from_travis.yml  release.yaml  repository-generation-test.yaml  test.yaml
invenio-integration-tests/: requirements-py3.6-devel.txt  requirements-py3.6-invenio3.2.txt  requirements-py3.6-invenio3.3.txt  requirements-py3.8-devel.txt  requirements-py3.8-invenio3.2.txt  requirements-py3.8-invenio3.3.txt  test2.txt
oarepo/: __init__.py  react-dependencies.json  requirements.txt  version.py  webpack.py
oarepo/collected_translations/flask_security/translations/ar/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/bg/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/ca/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/ca_ES/LC_MESSAGES/: flask_security.mo
oarepo/collected_translations/flask_security/translations/cs/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/da/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/da_DK/LC_MESSAGES/: flask_security.mo
oarepo/collected_translations/flask_security/translations/de/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/de_DE/LC_MESSAGES/: flask_security.mo
oarepo/collected_translations/flask_security/translations/el/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/es/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/es_ES/LC_MESSAGES/: flask_security.mo
oarepo/collected_translations/flask_security/translations/et/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/fa/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/fr/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/fr_FR/LC_MESSAGES/: flask_security.mo
oarepo/collected_translations/flask_security/translations/hr/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/hu/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/it/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/ja/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/ja_JP/LC_MESSAGES/: flask_security.mo
oarepo/collected_translations/flask_security/translations/ka/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/ko/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/lt/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/nl_NL/LC_MESSAGES/: flask_security.mo
oarepo/collected_translations/flask_security/translations/no/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/pl/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/pt/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/pt_BR/LC_MESSAGES/: flask_security.mo
oarepo/collected_translations/flask_security/translations/pt_PT/LC_MESSAGES/: flask_security.mo
oarepo/collected_translations/flask_security/translations/ro/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/ru/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/ru_RU/LC_MESSAGES/: flask_security.mo
oarepo/collected_translations/flask_security/translations/sk/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/sv/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/tr/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/tr_TR/LC_MESSAGES/: flask_security.mo
oarepo/collected_translations/flask_security/translations/uk/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/zh_CN/LC_MESSAGES/: flask_security.mo  flask_security.po
oarepo/collected_translations/flask_security/translations/zh_Hans_CN/LC_MESSAGES/: flask_security.mo
oarepo/config/: __init__.py  base.py  communities.py  cron.py  datastreams.py  einfra.py  generic_parameters.py  i18n.py  initial_configuration.py  initial_rdm_config.py  jobs.py  models.py  notifications.py  oai.py  rdm_records.py  stats.py  ui.py  vocabulary.py  workflows.py
scripts/: generate_micro-api_setup.sh  push_2_micro-api.sh  travis-push.sh
tests/: test_entrypoints.py  test_shell.py  test_version.py
tools/: common.sh  generate_test_repository.sh  install_demo_repository.sh  library_runner.sh  repository_installer.sh  repository_runner.sh  resolve_invenio.sh  runner.sh  testrig.yaml
workflows/: test.yaml
(+1316 files in other folders)
