[project]
name = "oarepo"
version = "14.2.1b5.dev4+2.rdm.14.0.0b5.dev4"
description = "CESNET, UCT Prague and NTK wrapper around Invenio v3."
keywords = [
    "oarepo",
    "invenio",
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiobotocore==2.26.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aioitertools==0.13.0",
    "aiosignal==1.4.0",
    "alembic==1.18.4",
    "amqp==5.3.1",
    "aniso8601==10.0.1",
    "apispec==6.9.0",
    "apispec-webframeworks==1.2.0",
    "arrow==1.4.0",
    "asttokens==3.0.1",
    "async-generator==1.10",
    "attrs==25.4.0",
    "babel==2.18.0",
    "babel-edtf==1.2.1",
    "base32-lib==1.0.2",
    "beautifulsoup4==4.14.3",
    "bibtexparser==1.4.4",
    "billiard==4.2.4",
    "binaryornot==0.4.4",
    "bleach==6.3.0",
    "blinker==1.9.0",
    "botocore==1.41.5",
    "build==1.4.0",
    "cachelib==0.13.0",
    "cairocffi==1.7.1",
    "cairosvg==2.8.2",
    "celery==5.4.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "check-manifest==0.51",
    "citeproc-py==0.9.0",
    "citeproc-py-styles==0.1.5",
    "click==8.3.1",
    "click-default-group==1.2.4",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "commonmark==0.9.1",
    "commonmeta-py==0.180",
    "cookiecutter==2.6.0",
    "counter-robots==2025.11",
    "coverage==7.13.4",
    "cryptography==46.0.5",
    "cssselect2==0.9.0",
    "datacite==1.3.1",
    "dateparser==1.2.0",
    "dcxml==0.1.2",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "deprecated==1.3.1",
    "dictdiffer==0.9.0",
    "distlib==0.4.0",
    "dnspython==2.8.0",
    "docker==7.1.0",
    "docker-services-cli==0.12.1",
    "dojson==1.7.0",
    "edtf==5.0.0",
    "elementpath==5.1.1",
    "email-validator==2.3.0",
    "events==0.5",
    "executing==2.2.1",
    "faker==40.4.0",
    "fancycompleter==0.11.1",
    "fastjsonschema==2.21.2",
    "filelock==3.24.2",
    "flask==3.1.2",
    "flask-alembic==3.1.1",
    "flask-babel==4.0.0",
    "flask-caching==2.3.1",
    "flask-celeryext==0.5.0",
    "flask-collect-invenio==1.4.0",
    "flask-cors==6.0.2",
    "flask-debugtoolbar==0.16.0",
    "flask-iiif==2.0.0",
    "flask-kvsession-invenio==1.0.0",
    "flask-limiter==2.9.2",
    "flask-login==0.6.3",
    "flask-mail==0.9.1",
    "flask-menu==2.0.0",
    "flask-oauthlib-invenio==2.0.0",
    "flask-principal==0.4.0",
    "flask-resources==1.3.0",
    "flask-restful==0.3.10",
    "flask-security-invenio==4.1.0",
    "flask-shell-ipython==0.5.3",
    "flask-sqlalchemy==3.1.1",
    "flask-talisman==0.8.1",
    "flask-webpackext==2.1.0",
    "flask-wtf==1.2.2",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "ftfy==6.3.1",
    "furl==2.1.4",
    "future==1.0.0",
    "geojson==3.2.0",
    "github3-py==4.0.1",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "humanize==4.15.0",
    "idna==3.11",
    "idutils==1.5.1",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "infinity==1.5",
    "iniconfig==2.3.0",
    "intervals==0.9.2",
    "invenio-access==5.1.0",
    "invenio-accounts==7.0.0",
    "invenio-administration==5.0.0+oarepo.2.77l6465rffdsy2ti",
    "invenio-app==3.0.0",
    "invenio-app-rdm==14.0.0b5.dev4+oarepo.2.3wqazamelrcgbkdl",
    "invenio-assets==4.2.1",
    "invenio-audit-logs==1.0.0",
    "invenio-banners==6.0.0",
    "invenio-base==2.4.0",
    "invenio-cache==3.0.0",
    "invenio-celery==2.2.0",
    "invenio-checks==4.0.0",
    "invenio-cli==1.9.2",
    "invenio-collections==4.0.0",
    "invenio-communities==23.0.0+oarepo.2.swvg2cm36zhq2oei",
    "invenio-config==1.1.0+oarepo.2.dv5liyra7qyq7h3v",
    "invenio-db==2.2.1",
    "invenio-drafts-resources==8.0.0+oarepo.2.lswr2rgi3n4e2gsy",
    "invenio-files-rest==4.0.0+oarepo.2.v335xtg4gmntnmvb",
    "invenio-formatter==4.0.0",
    "invenio-github==5.0.0",
    "invenio-i18n==3.5.0",
    "invenio-indexer==4.0.0",
    "invenio-jobs==7.0.1",
    "invenio-jsonschemas==2.1.0+oarepo.2.2no53f3jzomexsqs",
    "invenio-logging==4.1.1",
    "invenio-mail==2.3.0+oarepo.2.fgtps4ihf2oyxnec",
    "invenio-notifications==1.2.3+oarepo.2.j7ujyfao3qheoo6g",
    "invenio-oaiserver==4.0.0+oarepo.2.a2ly2s26a2b7kjtk",
    "invenio-oauth2server==4.0.0",
    "invenio-oauthclient==7.0.0",
    "invenio-pages==8.0.0",
    "invenio-pidstore==3.0.0",
    "invenio-previewer==4.0.0",
    "invenio-queues==1.0.2+oarepo.2.nhb6nfw32fmqwjak",
    "invenio-rdm-records==24.1.0+oarepo.2.hjyvbsl6lokdxs4p",
    "invenio-records==4.0.0",
    "invenio-records-files==2.0.0",
    "invenio-records-permissions==2.0.1",
    "invenio-records-resources==9.1.0+oarepo.2.gjjusrjsohw4f6l5",
    "invenio-records-rest==4.0.0",
    "invenio-records-ui==3.0.0",
    "invenio-requests==12.2.1+oarepo.2.7e5smeuqifcrfemf",
    "invenio-rest==3.0.0",
    "invenio-s3==4.0.0",
    "invenio-search==3.1.2+oarepo.2.jafkf65bjuyv7sv7",
    "invenio-search-ui==4.2.0",
    "invenio-sitemap==1.0.0",
    "invenio-stats==6.0.0",
    "invenio-theme==4.5.0",
    "invenio-userprofiles==5.0.0",
    "invenio-users-resources==10.3.0",
    "invenio-vocabularies==10.1.0+oarepo.2.iifjwosxn7qmhiwy",
    "invenio-webhooks==2.0.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "isal==1.8.0",
    "isbnlib==3.10.14",
    "isort==7.0.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.1.0",
    "jsmin==3.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonref==1.1.0",
    "jsonresolver==0.5.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "jupyterlab-pygments==0.3.0",
    "kombu==5.6.2",
    "latest-build==1.0.0",
    "latest-build-instance==14.0.0b99999999.dev0",
    "limits==5.8.0",
    "luqum==1.0.0",
    "lxml==6.0.2",
    "lxml-html-clean==0.4.3",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "marshmallow-oneofschema==3.2.0",
    "marshmallow-utils==0.14.1",
    "matplotlib-inline==0.2.1",
    "maxminddb==3.0.0",
    "maxminddb-geolite2==2018.703",
    "mistune==3.2.0",
    "msgpack==1.1.2",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "nameparser==1.1.3",
    "nbclient==0.10.4",
    "nbconvert==7.17.0",
    "nbformat==5.10.4",
    "nh3==0.2.22",
    "oauthlib==3.3.1",
    "opensearch-dsl==2.1.0",
    "opensearch-py==2.8.0",
    "ordered-set==4.1.0",
    "orderedmultidict==1.0.2",
    "orjson==3.11.7",
    "orjsonl==1.0.0",
    "outcome==1.3.0.post0",
    "packaging==26.0",
    "pandocfilters==1.5.1",
    "parso==0.8.6",
    "passlib==1.7.4",
    "pdbpp==0.12.0.post1",
    "pexpect==4.9.0",
    "pikepdf==9.11.0",
    "pillow==12.1.1",
    "pipenv==2026.0.3",
    "pipfile==0.0.2",
    "platformdirs==4.9.2",
    "pluggy==1.6.0",
    "ply==3.11",
    "polib==1.2.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psycopg2-binary==2.9.11",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycodestyle==2.14.0",
    "pycountry==26.2.16",
    "pycparser==3.0",
    "pydash==6.0.2",
    "pydocstyle==6.3.0",
    "pygments==2.19.2",
    "pyjwt==2.11.0",
    "pymysql==1.1.2",
    "pynpm==0.3.0",
    "pyparsing==3.3.2",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "pyrepl==0.11.4",
    "pysocks==1.7.1",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-flask==1.3.0",
    "pytest-github-actions-annotate-failures==0.3.0",
    "pytest-invenio==3.4.2",
    "pytest-isort==4.0.0",
    "pytest-pycodestyle==2.5.0",
    "pytest-pydocstyle==2.4.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-geoip==1.2",
    "python-slugify==8.0.4",
    "pytz==2024.1",
    "pywebpack==2.2.1",
    "pywin32==311",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "rdflib==7.6.0",
    "redis==7.2.0",
    "referencing==0.37.0",
    "regex==2026.1.15",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==12.6.0",
    "rich-click==1.9.7",
    "rpds-py==0.30.0",
    "ruff==0.15.1",
    "s3fs==2026.2.0",
    "selenium==4.40.0",
    "sentry-sdk==1.45.1",
    "setuptools==82.0.0",
    "simplejson==3.20.2",
    "simplekv==0.14.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.3",
    "sparqlwrapper==2.0.0",
    "speaklater==1.3",
    "sqlalchemy==2.0.46",
    "sqlalchemy-continuum==1.5.2",
    "sqlalchemy-utils==0.41.2",
    "stack-data==0.6.3",
    "text-unidecode==1.3",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "trio==0.33.0",
    "trio-typing==0.10.0",
    "trio-websocket==0.12.2",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-certifi==2021.10.8.3",
    "types-dateparser==1.3.0.20260211",
    "types-html5lib==1.1.11.20251117",
    "types-pyyaml==6.0.12.20250915",
    "types-urllib3==1.26.25.14",
    "types-webencodings==0.5.0.20251108",
    "types-xmltodict==0.15.0.20250907",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "ua-parser==1.0.1",
    "ua-parser-builtins==202602",
    "uritemplate==4.2.0",
    "uritools==6.0.1",
    "urllib3==2.6.3",
    "uwsgi==2.0.31",
    "uwsgi-tools==1.1.1",
    "uwsgitop==0.12",
    "validators==0.35.0",
    "vine==5.1.0",
    "virtualenv==20.37.0",
    "wand==0.6.13",
    "watchdog==6.0.0",
    "wcwidth==0.6.0",
    "webargs==5.5.3",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "werkzeug==3.1.5",
    "wrapt==1.17.3",
    "wsproto==1.3.2",
    "wtforms==3.2.1",
    "wtforms-alchemy==0.19.1",
    "wtforms-components==0.11.0",
    "xmlschema==4.3.1",
    "xmltodict==0.12.0",
    "xopen==2.0.2",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zipstream-ng==1.9.0",
    "zlib-ng==1.0.0",
    "zxcvbn==4.5.0",
]
authors = [
    { name = "CESNET z.s.p.o.", email = "miroslav.simek@cesnet.cz" },
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/oarepo/oarepo"

[project.optional-dependencies]
test = [
    "pytest-invenio",
]
tests = [
    "pytest-invenio",
]
dev = [
    "pytest-invenio",
]
devs = [
    "pytest-invenio",
]
s3 = []

[project.entry-points."invenio_assets.webpack"]
oarepo = "oarepo.webpack:theme"

[project.entry-points."invenio_config.module"]
oarepo = "oarepo.config.initial_configuration"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
oarepo = [
    "oarepo/assets/semantic-ui/*",
    "oarepo/collected_translations/*",
]
