[project]
name = "oarepo"
version = "14.2.1rc2+1.rdm.14.0.0rc2"
description = "CESNET, UCT Prague and NTK wrapper around Invenio v3."
keywords = [
    "oarepo",
    "invenio",
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiobotocore==2.26.0",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aioitertools==0.13.0",
    "aiosignal==1.4.0",
    "alembic==1.18.4",
    "amqp==5.3.1",
    "aniso8601==10.0.1",
    "apispec==6.10.0",
    "apispec-webframeworks==1.2.0",
    "arrow==1.4.0",
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "babel==2.18.0",
    "babel-edtf==1.2.1",
    "backports-zstd==1.6.0; python_version < '3.14'",
    "base32-lib==1.0.2",
    "beautifulsoup4==4.15.0",
    "bibtexparser==1.4.4",
    "billiard==4.2.4",
    "binaryornot==0.6.0",
    "bleach==6.4.0",
    "blinker==1.9.0",
    "botocore==1.41.5",
    "cachelib==0.14.0",
    "cairocffi==1.7.1",
    "cairosvg==2.9.0",
    "celery==5.4.0",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "citeproc-py==0.9.3",
    "citeproc-py-styles==0.1.5+oarepo.2.37zhnol2juflmval",
    "click==8.4.1",
    "click-default-group==1.2.4",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "commonmeta-py==0.226",
    "counter-robots==2025.11",
    "cryptography==49.0.0",
    "cssselect2==0.9.0",
    "datacite==1.4.0",
    "dateparser==1.2.0",
    "dcxml==0.1.2",
    "decorator==5.3.1",
    "defusedxml==0.7.1",
    "deprecated==1.3.1",
    "dictdiffer==0.9.0",
    "dnspython==2.8.0",
    "dojson==1.7.0",
    "edtf==5.0.1",
    "elementpath==5.1.2",
    "email-validator==2.3.0",
    "events==0.5",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.29.4",
    "flask==3.1.3",
    "flask-alembic==3.1.1",
    "flask-babel==4.0.0",
    "flask-caching==2.4.0",
    "flask-celeryext==0.5.0",
    "flask-collect-invenio==1.4.0",
    "flask-cors==6.0.5",
    "flask-iiif==2.0.0",
    "flask-kvsession-invenio==1.0.0",
    "flask-limiter==4.1.1",
    "flask-login==0.6.3",
    "flask-mail==0.9.1",
    "flask-menu==2.0.0",
    "flask-oauthlib-invenio==2.0.0",
    "flask-principal==0.4.0",
    "flask-resources==1.3.0",
    "flask-restful==0.3.10",
    "flask-security-invenio==4.2.1",
    "flask-sqlalchemy==3.1.1",
    "flask-talisman==0.8.1",
    "flask-webpackext==2.1.0",
    "flask-wtf==1.3.0",
    "frozenlist==1.8.0",
    "fsspec==2026.4.0",
    "ftfy==6.3.1",
    "furl==2.1.4",
    "future==1.0.0",
    "geojson==3.3.0",
    "github3-py==4.0.1",
    "greenlet==3.5.1",
    "h11==0.16.0",
    "idna==3.18",
    "idutils==1.6.1",
    "importlib-metadata==9.0.0",
    "importlib-resources==7.1.0",
    "infinity==1.5",
    "iniconfig==2.3.0",
    "intervals==0.9.2",
    "invenio-access==6.0.0",
    "invenio-accounts==8.1.0",
    "invenio-administration==6.0.1+oarepo.1.4zjvsn4usjkp2owp",
    "invenio-app==3.1.1",
    "invenio-app-rdm==14.0.0rc2+oarepo.1.mkromkhusu2i7mjx",
    "invenio-assets==4.2.1",
    "invenio-audit-logs==3.0.0",
    "invenio-banners==7.0.0",
    "invenio-base==2.4.0",
    "invenio-cache==3.0.0",
    "invenio-celery==2.2.0",
    "invenio-checks==10.0.0",
    "invenio-collections==9.0.0",
    "invenio-communities==28.1.0+oarepo.1.l3urhst5vd4hljnl",
    "invenio-config==1.1.0+oarepo.4.uquwys7agp2l27a3",
    "invenio-db==2.5.1",
    "invenio-drafts-resources==10.0.0+oarepo.1.aa7esyllsxmsu6a4",
    "invenio-files-rest==5.0.0+oarepo.1.rm6vkq5heonxnonk",
    "invenio-formatter==4.0.0",
    "invenio-i18n==3.5.0",
    "invenio-indexer==5.0.0",
    "invenio-jobs==10.0.0",
    "invenio-jsonschemas==2.1.0+oarepo.4.ah2r67trm7bozrty",
    "invenio-logging==4.2.0",
    "invenio-mail==2.3.0+oarepo.4.qsg7jcloi7wbim37",
    "invenio-notifications==1.3.0+oarepo.2.6aeoh5zp2umw2kjc",
    "invenio-oaiserver==5.0.0+oarepo.1.fe244nvk3gg6riuz",
    "invenio-oauth2server==5.0.0",
    "invenio-oauthclient==8.0.0",
    "invenio-pages==9.0.0",
    "invenio-pidstore==3.0.0",
    "invenio-previewer==5.0.1",
    "invenio-queues==1.0.3+oarepo.1.mbv3n5punhjld6n3",
    "invenio-rdm-records==32.0.1+oarepo.1.umup67j3ivro5rix",
    "invenio-records==5.0.0",
    "invenio-records-files==3.0.0",
    "invenio-records-permissions==3.0.0",
    "invenio-records-resources==10.1.0+oarepo.1.trnrudg2qsn3n65k",
    "invenio-records-rest==5.0.0",
    "invenio-records-ui==4.0.0",
    "invenio-requests==14.0.0+oarepo.1.2lmx3k7srcawdrgk",
    "invenio-rest==3.0.2",
    "invenio-s3==5.0.0",
    "invenio-search==3.1.2+oarepo.4.uwz7uudxhtm36x5h",
    "invenio-search-ui==4.2.1",
    "invenio-sitemap==1.0.0",
    "invenio-stats==6.1.3",
    "invenio-theme==4.8.0",
    "invenio-userprofiles==6.0.0",
    "invenio-users-resources==12.0.0",
    "invenio-vocabularies==13.0.0+oarepo.1.jaaeqz7sxjzde5rc",
    "isal==1.8.0",
    "isbnlib==3.10.14",
    "isbnlib2==3.11.19",
    "itsdangerous==2.2.0",
    "jedi==0.20.0",
    "jinja2==3.1.6",
    "jmespath==1.1.0",
    "jsmin==3.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jsonref==1.1.0",
    "jsonresolver==0.5.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kombu==5.6.2",
    "libpass==1.9.3",
    "limits==5.8.0",
    "luqum==1.0.0",
    "lxml==6.1.1",
    "lxml-html-clean==0.4.5",
    "mako==1.3.12",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "marshmallow-oneofschema==3.2.0",
    "marshmallow-utils==0.14.1",
    "matplotlib-inline==0.2.2",
    "maxminddb==3.1.1",
    "maxminddb-geolite2==2018.703",
    "mdurl==0.1.2",
    "mistune==3.2.1",
    "msgpack==1.2.0",
    "multidict==6.7.1",
    "nameparser==1.2.0",
    "nh3==0.2.22",
    "oauthlib==3.3.1",
    "opensearch-dsl==2.1.0",
    "opensearch-py==2.8.0",
    "ordered-set==4.1.0",
    "orderedmultidict==1.0.2",
    "orjson==3.11.9",
    "orjsonl==1.0.0",
    "outcome==1.3.0.post0",
    "packaging==26.2",
    "pandocfilters==1.5.1",
    "parso==0.8.7",
    "pexpect==4.9.0",
    "pillow==12.2.0",
    "platformdirs==4.10.0",
    "pluggy==1.6.0",
    "ply==3.11",
    "polib==1.2.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.5.2",
    "psutil==7.2.2",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "psycopg2-binary==2.9.12",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycountry==26.2.16",
    "pycparser==3.0",
    "pydash==6.0.2",
    "pygments==2.20.0",
    "pyjwt==2.13.0",
    "pymysql==1.2.0",
    "pynpm==0.3.0",
    "pyparsing==3.3.2",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-discovery==1.4.2",
    "python-dotenv==1.2.2",
    "python-geoip==1.2",
    "python-slugify==8.0.4",
    "pytz==2024.1",
    "pywebpack==2.2.1",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "rdflib==7.6.0",
    "redis==8.0.0",
    "referencing==0.37.0",
    "regex==2026.5.9",
    "requests==2.34.2",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "rich-click==1.9.8",
    "rpds-py==2026.5.1",
    "s3fs==2026.4.0",
    "sentry-sdk==1.45.1",
    "simplejson==4.1.1",
    "simplekv==0.14.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.4",
    "sparqlwrapper==2.0.0",
    "speaklater==1.3",
    "sqlalchemy==2.0.51",
    "sqlalchemy-continuum==1.5.2",
    "sqlalchemy-utils==0.41.2",
    "stack-data==0.6.3",
    "text-unidecode==1.3",
    "tinycss2==1.5.1",
    "toml==0.10.2",
    "tornado==6.5.7",
    "traitlets==5.15.1",
    "trio==0.33.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.15.0",
    "tzdata==2026.2",
    "tzlocal==5.4",
    "ua-parser==1.0.2",
    "ua-parser-builtins==202606",
    "uritemplate==4.2.0",
    "uritools==6.1.2",
    "urllib3==2.7.0",
    "uwsgi==2.0.31",
    "uwsgi-tools==1.1.1",
    "uwsgitop==0.12",
    "validators==0.35.0",
    "vine==5.1.0",
    "wand==0.6.13",
    "wcwidth==0.8.1",
    "webargs==8.7.1",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "werkzeug==3.1.8",
    "wrapt==1.17.3",
    "wsproto==1.3.2",
    "wtforms==3.2.2",
    "wtforms-alchemy==0.19.1",
    "wtforms-components==0.11.0",
    "xmlschema==4.3.1",
    "xmltodict==0.12.0",
    "xopen==2.1.0",
    "yarl==1.24.2",
    "zipp==4.1.0",
    "zipstream-ng==1.9.2",
    "zlib-ng==1.0.0",
    "zxcvbn==4.5.0",
]
authors = [
    { name = "CESNET z.s.p.o.", email = "miroslav.simek@cesnet.cz" },
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/oarepo/oarepo"

[project.optional-dependencies]
test = [
    "pytest-invenio",
]
tests = [
    "pytest-invenio",
]
dev = [
    "pytest-invenio",
]
devs = [
    "pytest-invenio",
]
s3 = []

[project.entry-points."invenio_assets.webpack"]
oarepo = "oarepo.webpack:theme"

[project.entry-points."invenio_config.module"]
oarepo = "oarepo.config.initial_configuration"
invenio_app_rdm = "oarepo.config.initial_rdm_config"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
oarepo = [
    "oarepo/assets/semantic-ui/*",
    "oarepo/collected_translations/*",
]
